2011-01-26  Xianzhu Wang  <wangxianzhu@google.com>

Reviewed by Tony Chang.

        Add '--no-timeout' option to Chromium DRT to ease debugging.
        https://bugs.webkit.org/show_bug.cgi?id=52873

        * DumpRenderTree/chromium/DumpRenderTree.cpp:
        (main):

Canonical link: https://commits.webkit.org/66924@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76704 268f45cc-cd09-0410-ab3c-d52691b4dbfc